# discord-mqtt-bot

./: .gitignore  .replit  README.md  main.py  package_install_log  pyproject.toml
